k8s/dotmakeup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dotmakeup-bird
spec:
  selector:
    matchLabels:
      app: dotmakeup
      network: twitter
  serviceName: "dotmakeup"
  replicas: 4 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: dotmakeup 
        network: twitter
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: network
                    operator: In
                    values:
                      - twitter
              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      containers:
        - name: dotmakeup-social-sidecar
          image: cloutier/dotmakeup-social-sidecar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: sidecar
          livenessProbe:
            httpGet:
              path: /twitter/_meta
              port: 5000
            initialDelaySeconds: 10 
            periodSeconds: 3
          volumeMounts:
            - name: accounts
              mountPath: /opt/sidecar/db
        - name: dotmakeup
          image: cloutier/bird.makeup:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: "900Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /About
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: accounts
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "csi-cinder-classic"
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: dotmakeup
spec:
  type: ClusterIP
  selector:
    app: dotmakeup
    network: twitter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
