k8s/kilogram.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dotmakeup-kilo
spec:
  selector:
    matchLabels:
      app: dotmakeup
      network: instagram
  serviceName: "dotmakeup"
  replicas: 1 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: dotmakeup 
        network: instagram
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: network
                    operator: In
                    values:
                      - instagram
              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      containers:
        - name: dotmakeup
          image: cloutier/bird.makeup:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: "900Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /About
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
        - name: dotmakeup-social-sidecar
          image: cloutier/dotmakeup-social-sidecar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: sidecar
---
apiVersion: v1
kind: Service
metadata:
  name: dotmakeup-kilo
spec:
  type: ClusterIP
  selector:
    app: dotmakeup
    network: instagram
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
